hphp/test/zend/good/Zend/tests/bug41117_1.php.expectf

Fatal error: Cannot re-assign $this in %s/bug41117_1.php on line 3
